Apply the .container class to <main> actually - this stops things from getting TOO wide on big displays but uses plenty of space on narrow displays

--- a/lemoncurry/static/lemoncurry/css/layout.styl
+++ b/lemoncurry/static/lemoncurry/css/layout.styl
@@ -52,7 +52,8 @@ body
 
 
 	> main
-		margin 2rem
+		margin-top 2rem
+		margin-bottom 2rem
 		flex 1
 		display flex
 
